SERVER-21675 change replica_sets_legacy to replica_sets_pv0
(cherry picked from commit 8191f15f9c1a34b38cde92784d59739d45387ec9 [formerly f17d826a61b01023f6034bc62138639c2d704311])


Former-commit-id: 634d4d14de76491e5e0a4ab27922e55e89ceafe7

--- a/etc/evergreen.yml
+++ b/etc/evergreen.yml
@@ -2429,12 +2429,12 @@ tasks:
       run_multiple_jobs: true
 
 - <<: *task_template
-  name: replica_sets_legacy
+  name: replica_sets_pv0
   commands:
   - func: "do setup"
   - func: "run tests"
     vars:
-      resmoke_args: --suites=replica_sets_legacy
+      resmoke_args: --suites=replica_sets_pv0
       run_multiple_jobs: true
 
 - <<: *task_template
@@ -3326,7 +3326,7 @@ buildvariants:
   - name: replica_sets
   - name: replica_sets_WT
   - name: replica_sets_auth
-  - name: replica_sets_legacy
+  - name: replica_sets_pv0
   - name: replica_sets_jscore_passthrough
   - name: replica_sets_jscore_passthrough_WT
   - name: master_slave
@@ -3467,7 +3467,7 @@ buildvariants:
   - name: replica_sets
   - name: replica_sets_WT
   - name: replica_sets_auth
-  - name: replica_sets_legacy
+  - name: replica_sets_pv0
   - name: replica_sets_jscore_passthrough
   - name: replica_sets_jscore_passthrough_WT
   - name: master_slave
@@ -4321,7 +4321,7 @@ buildvariants:
   - name: replica_sets_WT_ese
   - name: replica_sets_auth
   - name: replica_sets_compression
-  - name: replica_sets_legacy
+  - name: replica_sets_pv0
   - name: replica_sets_jscore_passthrough_WT
   - name: master_slave_WT
   - name: master_slave_auth
@@ -5604,7 +5604,7 @@ buildvariants:
   - name: replica_sets_compression
     distros:
     - rhel62-large
-  - name: replica_sets_legacy
+  - name: replica_sets_pv0
     distros:
     - rhel62-large
   - name: replica_sets_jscore_passthrough
@@ -5828,7 +5828,7 @@ buildvariants:
   - name: replica_sets_compression
     distros:
     - rhel62-large
-  - name: replica_sets_legacy
+  - name: replica_sets_pv0
     distros:
     - rhel62-large
   - name: replica_sets_jscore_passthrough
@@ -6330,7 +6330,7 @@ buildvariants:
   - name: replica_sets_WT
   - name: replica_sets_WT_ese
   - name: replica_sets_auth
-  - name: replica_sets_legacy
+  - name: replica_sets_pv0
   # - name: replica_sets_jscore_passthrough
   - name: replica_sets_jscore_passthrough_WT
   # - name: master_slave
@@ -6467,7 +6467,7 @@ buildvariants:
   - name: replica_sets_WT
   - name: replica_sets_WT_ese
   - name: replica_sets_auth
-  - name: replica_sets_legacy
+  - name: replica_sets_pv0
   # - name: replica_sets_jscore_passthrough
   - name: replica_sets_jscore_passthrough_WT
   # - name: master_slave
@@ -6604,7 +6604,7 @@ buildvariants:
   - name: replica_sets_WT
   - name: replica_sets_WT_ese
   - name: replica_sets_auth
-  - name: replica_sets_legacy
+  - name: replica_sets_pv0
   # - name: replica_sets_jscore_passthrough
   - name: replica_sets_jscore_passthrough_WT
   # - name: master_slave
@@ -6978,7 +6978,7 @@ buildvariants:
   - name: replica_sets_WT
   - name: replica_sets_WT_ese
   - name: replica_sets_auth
-  - name: replica_sets_legacy
+  - name: replica_sets_pv0
   - name: replica_sets_jscore_passthrough_WT
   - name: master_slave_WT
   - name: master_slave_auth
@@ -7246,7 +7246,7 @@ buildvariants:
   - name: replica_sets_WT
   - name: replica_sets_WT_ese
   - name: replica_sets_auth
-  - name: replica_sets_legacy
+  - name: replica_sets_pv0
   - name: replica_sets_jscore_passthrough_WT
   - name: master_slave_WT
   - name: master_slave_auth
@@ -7923,7 +7923,7 @@ buildvariants:
   - name: read_concern_majority_passthrough_WT
   - name: replica_sets_WT
   - name: replica_sets_auth
-  - name: replica_sets_legacy
+  - name: replica_sets_pv0
   - name: replica_sets_jscore_passthrough
   - name: master_slave_WT
   - name: master_slave_auth
@@ -8008,7 +8008,7 @@ buildvariants:
   - name: parallel_compatibility
   - name: replica_sets_WT
   - name: replica_sets_auth
-  - name: replica_sets_legacy
+  - name: replica_sets_pv0
   - name: replica_sets_jscore_passthrough
   - name: master_slave_WT
   - name: master_slave_auth
@@ -8081,7 +8081,7 @@ buildvariants:
   - name: read_concern_majority_passthrough_WT
   - name: replica_sets_WT
   - name: replica_sets_auth
-  - name: replica_sets_legacy
+  - name: replica_sets_pv0
   - name: replica_sets_jscore_passthrough
   - name: master_slave_WT
   - name: master_slave_auth
@@ -8167,7 +8167,7 @@ buildvariants:
   - name: read_concern_majority_passthrough_WT
   - name: replica_sets_WT
   - name: replica_sets_auth
-  - name: replica_sets_legacy
+  - name: replica_sets_pv0
   - name: replica_sets_jscore_passthrough
   - name: master_slave_WT
   - name: master_slave_auth
@@ -8363,7 +8363,7 @@ buildvariants:
   - name: replica_sets_WT_ese
   - name: replica_sets_auth
   - name: replica_sets_compression
-  - name: replica_sets_legacy
+  - name: replica_sets_pv0
   - name: replica_sets_jscore_passthrough
   - name: replica_sets_jscore_passthrough_WT
   - name: replica_sets_initsync_jscore_passthrough
@@ -8538,7 +8538,7 @@ buildvariants:
   - name: replica_sets_WT_ese
   - name: replica_sets_auth
   - name: replica_sets_compression
-  - name: replica_sets_legacy
+  - name: replica_sets_pv0
   - name: replica_sets_jscore_passthrough
   - name: replica_sets_jscore_passthrough_WT
   - name: replica_sets_initsync_jscore_passthrough
@@ -8694,7 +8694,7 @@ buildvariants:
   - name: replica_sets_WT
   - name: replica_sets_WT_ese
   - name: replica_sets_auth
-  - name: replica_sets_legacy
+  - name: replica_sets_pv0
   - name: replica_sets_jscore_passthrough
   - name: replica_sets_jscore_passthrough_WT
   - name: master_slave
@@ -8804,7 +8804,7 @@ buildvariants:
   - name: replica_sets_auth
     distros:
     - rhel62-large
-  - name: replica_sets_legacy
+  - name: replica_sets_pv0
     distros:
     - rhel62-large
   - name: replica_sets_jscore_passthrough
