SERVER-28147: Increase timeout on sys-perf shard tests
(cherry picked from commit edec23365e1769869605e97c3489c64c5ea71504 [formerly e2d27510a270876a8b672171ce95c38b7c003199])


Former-commit-id: 23a00d8dcabb90734a122fd2d15d29327f8812f7

--- a/etc/system_perf.yml
+++ b/etc/system_perf.yml
@@ -476,6 +476,7 @@ tasks:
   depends_on:
     - name: compile
       variant: linux-standalone
+  exec_timeout_secs: 36000 # 10 hours
   commands:
     - func: "prepare environment"
       vars:
@@ -497,6 +498,7 @@ tasks:
   depends_on:
     - name: compile
       variant: linux-standalone
+  exec_timeout_secs: 36000 # 10 hours
   commands:
     - func: "prepare environment"
       vars:
