SERVER-28147: Increase timeout on sys-perf shard tests
(cherry picked from commit edec23365e1769869605e97c3489c64c5ea71504 [formerly e2d27510a270876a8b672171ce95c38b7c003199])


Former-commit-id: 4be24e6efa04bd5c85e9726c034502d5b36dcb80

--- a/etc/system_perf.yml
+++ b/etc/system_perf.yml
@@ -452,6 +452,7 @@ tasks:
   depends_on:
     - name: compile
       variant: linux-standalone
+  exec_timeout_secs: 36000 # 10 hours
   commands:
     - func: "prepare environment"
       vars:
@@ -473,6 +474,7 @@ tasks:
   depends_on:
     - name: compile
       variant: linux-standalone
+  exec_timeout_secs: 36000 # 10 hours
   commands:
     - func: "prepare environment"
       vars:
