--- a/src/mongo/db/repl/SConscript
+++ b/src/mongo/db/repl/SConscript
@@ -9,6 +9,7 @@ env.Library(
     ],
     LIBDEPS=[
         'data_replicator_external_state_impl',
+        'oplog_interface_local',
         'repl_coordinator_interface',
         'rollback_source_impl',
         'rs_rollback',
@@ -234,10 +235,8 @@ env.Library(
         'rs_rollback.cpp',
     ],
     LIBDEPS=[
-        'oplog_interface_local',
-        'oplog_interface_remote',
         'roll_back_local_operations',
-        'rollback_source_impl',
+        #'$BUILD_DIR/mongo/db/s/sharding', # CYCLE
     ],
     LIBDEPS_TAGS=[
         # Depends on files in serverOnlyFiles, and has other unresolved symbols.
@@ -266,6 +265,7 @@ env.CppUnitTest(
         'rs_rollback_test.cpp',
     ],
     LIBDEPS=[
+        'oplog_interface_local',
         'oplog_interface_mock',
         'replmocks',
         'rs_rollback',
