--- a/etc/system_perf.yml
+++ b/etc/system_perf.yml
@@ -267,11 +267,7 @@ functions:
           source ./dsienv.sh
           source ./venv/bin/activate
           echo "Run test for ${test}-${storageEngine} with setup ${setup}"
-          # Specify the test list to use. Change the testList parameter
-          # if you want to run a non-default list.
-          $DSI_PATH/bin/update_test_list.py ${testList}
-          $DSI_PATH/bin/run-${test}.sh ${storageEngine} ${setup} ${cluster}
-          echo "Done test for ${test}-${storageEngine} with setup ${setup}!"
+          $DSI_PATH/bin/run_test.py ${storageEngine} ${test} ${cluster}
     - command: "json.send"
       params:
          name: "perf"
@@ -443,7 +439,6 @@ tasks:
       vars:
         storageEngine: "wiredTiger"
         test: "ycsb"
-        testList: "default"
     - func: "make test log artifact"
     - func: "analyze"
       vars:
@@ -466,7 +461,6 @@ tasks:
       vars:
         storageEngine: "mmapv1"
         test: "ycsb"
-        testList: "default"
     - func: "make test log artifact"
     - func: "analyze"
       vars:
@@ -476,12 +470,11 @@ tasks:
   depends_on:
     - name: compile
       variant: linux-standalone
-  exec_timeout_secs: 36000 # 10 hours
   commands:
     - func: "prepare environment"
       vars:
         storageEngine: "wiredTiger"
-        test: "benchRun"
+        test: "core"
     - func: "infrastructure provisioning"
     - func: "configure mongodb cluster"
       vars:
@@ -489,8 +482,7 @@ tasks:
     - func: "run test"
       vars:
         storageEngine: "wiredTiger"
-        test: "benchRun"
-        testList: "default"
+        test: "core"
     - func: "make test log artifact"
     - func: "analyze"
 
@@ -498,12 +490,11 @@ tasks:
   depends_on:
     - name: compile
       variant: linux-standalone
-  exec_timeout_secs: 36000 # 10 hours
   commands:
     - func: "prepare environment"
       vars:
         storageEngine: "mmapv1"
-        test: "benchRun"
+        test: "core"
     - func: "infrastructure provisioning"
     - func: "configure mongodb cluster"
       vars:
@@ -511,8 +502,127 @@ tasks:
     - func: "run test"
       vars:
         storageEngine: "mmapv1"
-        test: "benchRun"
-        testList: "default"
+        test: "core"
+    - func: "make test log artifact"
+    - func: "analyze"
+
+- name: non_sharded_workloads_WT
+  depends_on:
+    - name: compile
+      variant: linux-standalone
+  commands:
+    - func: "prepare environment"
+      vars:
+        storageEngine: "wiredTiger"
+        test: "non_sharded"
+    - func: "infrastructure provisioning"
+    - func: "configure mongodb cluster"
+      vars:
+        storageEngine: "wiredTiger"
+    - func: "run test"
+      vars:
+        storageEngine: "wiredTiger"
+        test: "non_sharded"
+    - func: "make test log artifact"
+    - func: "analyze"
+
+- name: non_sharded_workloads_MMAPv1
+  depends_on:
+    - name: compile
+      variant: linux-standalone
+  commands:
+    - func: "prepare environment"
+      vars:
+        storageEngine: "mmapv1"
+        test: "non_sharded"
+    - func: "infrastructure provisioning"
+    - func: "configure mongodb cluster"
+      vars:
+        storageEngine: "mmapv1"
+    - func: "run test"
+      vars:
+        storageEngine: "mmapv1"
+        test: "non_sharded"
+    - func: "make test log artifact"
+    - func: "analyze"
+
+- name: mongos_workloads_WT
+  depends_on:
+    - name: compile
+      variant: linux-standalone
+  commands:
+    - func: "prepare environment"
+      vars:
+        storageEngine: "wiredTiger"
+        test: "mongos"
+    - func: "infrastructure provisioning"
+    - func: "configure mongodb cluster"
+      vars:
+        storageEngine: "wiredTiger"
+    - func: "run test"
+      vars:
+        storageEngine: "wiredTiger"
+        test: "mongos"
+    - func: "make test log artifact"
+    - func: "analyze"
+
+- name: mongos_workloads_MMAPv1
+  depends_on:
+    - name: compile
+      variant: linux-standalone
+  commands:
+    - func: "prepare environment"
+      vars:
+        storageEngine: "mmapv1"
+        test: "mongos"
+    - func: "infrastructure provisioning"
+    - func: "configure mongodb cluster"
+      vars:
+        storageEngine: "mmapv1"
+    - func: "run test"
+      vars:
+        storageEngine: "mmapv1"
+        test: "mongos"
+    - func: "make test log artifact"
+    - func: "analyze"
+
+- name: move_chunk_workloads_WT
+  depends_on:
+    - name: compile
+      variant: linux-standalone
+  commands:
+    - func: "prepare environment"
+      vars:
+        storageEngine: "wiredTiger"
+        test: "move_chunk"
+    - func: "infrastructure provisioning"
+    - func: "configure mongodb cluster"
+      vars:
+        storageEngine: "wiredTiger"
+    - func: "run test"
+      vars:
+        storageEngine: "wiredTiger"
+        test: "move_chunk"
+    - func: "make test log artifact"
+    - func: "analyze"
+
+- name: move_chunk_workloads_MMAPv1
+  depends_on:
+    - name: compile
+      variant: linux-standalone
+  commands:
+    - func: "prepare environment"
+      vars:
+        storageEngine: "mmapv1"
+        test: "move_chunk"
+    - func: "infrastructure provisioning"
+    - func: "configure mongodb cluster"
+      vars:
+        storageEngine: "mmapv1"
+    - func: "run test"
+      vars:
+        storageEngine: "mmapv1"
+        test: "move_chunk"
     - func: "make test log artifact"
     - func: "analyze"
 
@@ -522,6 +632,10 @@ tasks:
       variant: linux-standalone
   commands:
     - func: "prepare environment"
+      vars:
+        storageEngine: "wiredTiger"
+        test: "secondary_performance"
+        setup: "replica-2node"
     - func: "infrastructure provisioning"
     - func: "configure mongodb cluster"
       vars:
@@ -530,8 +644,7 @@ tasks:
     - func: "run test"
       vars:
         storageEngine: "wiredTiger"
-        test: "benchRun"
-        testList: "secondary_performance"
+        test: "secondary_performance"
     - func: "make test log artifact"
     - func: "analyze"
 
@@ -541,6 +654,10 @@ tasks:
       variant: linux-standalone
   commands:
     - func: "prepare environment"
+      vars:
+        storageEngine: "mmapv1"
+        test: "secondary_performance"
+        setup: "replica-2node"
     - func: "infrastructure provisioning"
     - func: "configure mongodb cluster"
       vars:
@@ -549,8 +666,7 @@ tasks:
     - func: "run test"
       vars:
         storageEngine: "mmapv1"
-        test: "benchRun"
-        testList: "secondary_performance"
+        test: "secondary_performance"
     - func: "make test log artifact"
     - func: "analyze"
 
@@ -635,7 +751,6 @@ tasks:
       vars:
         storageEngine: "wiredTiger"
         test: "initialSync"
-        testList: "default"
     - func: "make test log artifact"
     - func: "analyze"
 
@@ -656,7 +771,6 @@ tasks:
       vars:
         storageEngine: "mmapv1"
         test: "initialSync"
-        testList: "default"
     - func: "make test log artifact"
     - func: "analyze"
 
@@ -679,7 +793,6 @@ tasks:
       vars:
         storageEngine: "wiredTiger"
         test: "initialSync"
-        testList: "default"
     - func: "make test log artifact"
     - func: "analyze"
 
@@ -702,7 +815,6 @@ tasks:
       vars:
         storageEngine: "mmapv1"
         test: "initialSync"
-        testList: "default"
     - func: "make test log artifact"
     - func: "analyze"
 
@@ -724,7 +836,6 @@ tasks:
       vars:
         storageEngine: "wiredTiger"
         test: "initialsync-logkeeper"
-        testList: "initialsync-logkeeper"
     - func: "make test log artifact"
     - func: "analyze"
 
@@ -778,6 +889,8 @@ buildvariants:
     - name: core_workloads_WT
     - name: industry_benchmarks_MMAPv1
     - name: core_workloads_MMAPv1
+    - name: non_sharded_workloads_WT
+    - name: non_sharded_workloads_MMAPv1
 
 - name: linux-standalone
   display_name: Linux Standalone
@@ -800,6 +913,8 @@ buildvariants:
     - name: core_workloads_WT
     - name: industry_benchmarks_MMAPv1
     - name: core_workloads_MMAPv1
+    - name: non_sharded_workloads_WT
+    - name: non_sharded_workloads_MMAPv1
 
 - name: linux-3-shard
   display_name: Linux 3-Shard Cluster
@@ -819,6 +934,10 @@ buildvariants:
     - name: core_workloads_WT
     - name: industry_benchmarks_MMAPv1
     - name: core_workloads_MMAPv1
+    - name: mongos_workloads_WT
+    - name: mongos_workloads_MMAPv1
+    - name: move_chunk_workloads_WT
+    - name: move_chunk_workloads_MMAPv1
 
 - name: linux-3-node-replSet
   display_name: Linux 3-Node ReplSet
@@ -839,6 +958,8 @@ buildvariants:
     - name: core_workloads_MMAPv1
     - name: secondary_performance_WT
     - name: secondary_performance_MMAPv1
+    - name: non_sharded_workloads_WT
+    - name: non_sharded_workloads_MMAPv1
 
 - name: linux-3-node-replSet-initialsync
   display_name: Linux 3-Node ReplSet Initial Sync
