SERVER-28586 Check out branch before switching to subdirectory.
The default branch was changed to track jepsen-io/mongodb/master and
therefore doesn't contain a jepsen/ subdirectory.


Former-commit-id: 45f67b19a81b58017764b8487f5a8a9e605f6094

--- a/etc/evergreen.yml
+++ b/etc/evergreen.yml
@@ -499,11 +499,12 @@ functions:
         script: |
           set -o errexit
           git clone git@github.com:10gen/jepsen.git
-          cd jepsen/jepsen
+          cd jepsen
           git checkout mongodb-master-linearizable-2
           branch=$(git symbolic-ref --short HEAD)
           commit=$(git show -s --pretty=format:"%h - %an, %ar: %s")
           echo "Git branch: $branch, commit: $commit"
+          cd jepsen
           lein install
     - command: shell.exec
       params:
