--- a/buildscripts/resmokeconfig/suites/sharding_last_stable_mongos_and_mixed_shards.yml
+++ b/buildscripts/resmokeconfig/suites/sharding_last_stable_mongos_and_mixed_shards.yml
@@ -90,6 +90,8 @@ selector:
     - jstests/sharding/mongos_query_comment.js
     # Can un-blacklist once BACKPORT-484 is finished and in 3.2 release
     - jstests/sharding/linearizable_read_concern.js
+    # Last stable 3.2 doesn't have the fix for SERVER-28447
+    - jstests/sharding/migration_critical_section_concurrency.js
 
 executor:
   js_test:
