SERVER-24607 Add Collector for system statistics
(cherry picked from commit ed7d672eb2ef63819e0d8d0a8f217b8c86d6acd7 [formerly a05b8e17ea4e92ab6e1d7062cb5ffb9f4e8721a3])


Former-commit-id: 0bb11fa3305619b000cca96a8c13a6ebffe85162

--- a/src/mongo/db/ftdc/SConscript
+++ b/src/mongo/db/ftdc/SConscript
@@ -32,21 +32,24 @@ ftdcEnv.Library(
     ],
 )
 
+platform_libs = []
+
+if env.TargetOSIs('linux'):
+    platform_libs = [
+        '$BUILD_DIR/mongo/util/procparser'
+    ]
+
 env.Library(
     target='ftdc_mongod',
     source=[
         'ftdc_mongod.cpp',
+        'ftdc_system_stats.cpp',
     ],
     LIBDEPS=[
         '$BUILD_DIR/mongo/base',
         '$BUILD_DIR/mongo/db/server_parameters',
         'ftdc'
-    ],
-    LIBDEPS_TAGS=[
-        # Needs 'mongo::storageGlobalParams' in storage_options.cpp which is in serveronly
-        # And this library is already part of serveronly
-        'incomplete',
-    ],
+    ] + platform_libs,
 )
 
 env.CppUnitTest(
