SERVER-24616 Add new getDiagnosticData command
(cherry picked from commit 6a7b24230fa57033fa1306d56c203fb28bf45030 [formerly c1042b38c9f6469ddcce2dfdf5dacbff0334cd14])


Former-commit-id: 61fc1d72075430bd58c65b1644b8eaa1ca290377

--- a/src/mongo/db/ftdc/SConscript
+++ b/src/mongo/db/ftdc/SConscript
@@ -42,6 +42,7 @@ if env.TargetOSIs('linux'):
 env.Library(
     target='ftdc_mongod',
     source=[
+        'ftdc_commands.cpp',
         'ftdc_mongod.cpp',
         'ftdc_system_stats.cpp',
     ],
