SERVER-28584: Remove _dr config from sys-perf
Former-commit-id: 5966b40bdd01da4252844fc249a5d2c6d652049f

--- a/etc/system_perf.yml
+++ b/etc/system_perf.yml
@@ -829,7 +829,7 @@ buildvariants:
   modules: *modules
   expansions:
     compile_flags: -j$(grep -c ^processor /proc/cpuinfo) CC=/opt/mongodbtoolchain/bin/gcc CXX=/opt/mongodbtoolchain/bin/g++ --release
-    setup: replica-2node.dr
+    setup: replica-2node
     cluster: replica
     platform: linux
     project: *project
