SERVER-28997: Limit SCRAM-SHA-1 cache's use of Secure Memory
(cherry picked from commit 7130da9ebcb92be2cfc3d0299391bd2ce2cf5a55 [formerly 7ca9cebf2623865fd0077f90baf61132d866a674])
(cherry picked from commit 62497400b382b86e7cee82d92406b3055e961bc8 [formerly 8a4d00991cd1721240f13c8713d7d819baa1763e])


Former-commit-id: 764b75a48f57c84ea8c0b867b3128e1d8760086a

--- a/src/mongo/db/auth/SConscript
+++ b/src/mongo/db/auth/SConscript
@@ -188,3 +188,10 @@ env.Library(
         'authcore',
     ]
 )
+
+env.CppUnitTest('sasl_scramsha1_test',                                                              
+                'sasl_scramsha1_test.cpp',                                                          
+                LIBDEPS=[                                                                           
+                    'saslauth',                                                                     
+                    '$BUILD_DIR/mongo/client/sasl_client',                                          
+                ]) 
