SERVER-27285 Run jsCore tests while periodically killing secondaries.
Adds a new replica_sets_kill_secondaries_jscore_passthrough.yml suite
that after running tests for a certain period of time (defaults to 30
seconds), resmoke.py will send a SIGKILL to all of the replica set's
secondaries. Each node is then restarted individually with the primary
disabled to verify it reaches the SECONDARY state within 5 minutes of
starting up.

(cherry picked from commit 19dbad2693533fe137a50e7ee0458465c7b5e53d [formerly 07f5d153305c0bf10ef55b5dc73eb9a2ca8cb104])
(cherry picked from commit 09291e63d4a2fc6e2031269124e7b458a5821f69 [formerly e02c3c769bbcbe26d9132caf28cad6d2d2b4766a])

Also includes the remainder of the changes from
525ae37351069c6ee4f6a08d194d87cc2cd1eef7 [formerly 068878410614c789f23b2abc6c5b9680c82abe5e] to rename
core_small_oplog_rs_kill_secondaries.yml to
replica_sets_kill_secondaries_jscore_passthrough.yml.


Former-commit-id: 2d7be840ecf1b7928a99def51fe3bea8304738f8

--- a/etc/evergreen.yml
+++ b/etc/evergreen.yml
@@ -2128,6 +2128,17 @@ tasks:
       run_multiple_jobs: true
 
 - <<: *task_template
+  name: replica_sets_kill_secondaries_jscore_passthrough_WT
+  depends_on:
+  - name: jsCore_WT
+  commands:
+  - func: "do setup"
+  - func: "run tests"
+    vars:
+      resmoke_args: --suites=replica_sets_kill_secondaries_jscore_passthrough --storageEngine=wiredTiger
+      run_multiple_jobs: true
+
+- <<: *task_template
   name: mongosTest
   commands:
   - func: "do setup"
@@ -4938,6 +4949,9 @@ buildvariants:
   - name: replica_sets_resync_static_jscore_passthrough_WT
     distros:
     - windows-64-vs2015-large
+  - name: replica_sets_kill_secondaries_jscore_passthrough_WT
+    distros:
+    - windows-64-vs2015-large
   - name: master_slave
   - name: master_slave_WT
   - name: master_slave_jscore_passthrough
@@ -5377,6 +5391,7 @@ buildvariants:
   - name: replica_sets_WT
   - name: replica_sets_jscore_passthrough
   - name: replica_sets_jscore_passthrough_WT
+  - name: replica_sets_kill_secondaries_jscore_passthrough_WT
   - name: master_slave
   - name: master_slave_WT
   - name: master_slave_jscore_passthrough
@@ -5646,6 +5661,9 @@ buildvariants:
   - name: replica_sets_resync_static_jscore_passthrough_WT
     distros:
     - rhel62-large
+  - name: replica_sets_kill_secondaries_jscore_passthrough_WT
+    distros:
+    - rhel62-large
   - name: master_slave
   - name: master_slave_WT
   - name: master_slave_auth
@@ -5864,6 +5882,9 @@ buildvariants:
     distros:
     - rhel62-large
   - name: replica_sets_resync_static_jscore_passthrough_WT
+    distros:
+    - rhel62-large
+  - name: replica_sets_kill_secondaries_jscore_passthrough_WT
     distros:
     - rhel62-large
   - name: master_slave
@@ -8341,6 +8362,7 @@ buildvariants:
   - name: replica_sets_initsync_static_jscore_passthrough_WT
   - name: replica_sets_resync_static_jscore_passthrough
   - name: replica_sets_resync_static_jscore_passthrough_WT
+  - name: replica_sets_kill_secondaries_jscore_passthrough_WT
   - name: master_slave
   - name: master_slave_WT
   - name: master_slave_auth
@@ -8514,6 +8536,7 @@ buildvariants:
   - name: replica_sets_initsync_static_jscore_passthrough_WT
   - name: replica_sets_resync_static_jscore_passthrough
   - name: replica_sets_resync_static_jscore_passthrough_WT
+  - name: replica_sets_kill_secondaries_jscore_passthrough_WT
   - name: master_slave
   - name: master_slave_WT
   - name: master_slave_auth
