--- a/etc/evergreen.yml
+++ b/etc/evergreen.yml
@@ -54,7 +54,6 @@ variables:
       max_jobs: 0  # If set in combination with run_multiple_jobs, will cap the number of jobs used.
 
 - &jepsen_config_vars
-  hang_analyzer_processes: "java"
   jepsen_key_time_limit: --key-time-limit 15
   jepsen_protocol_version: --protocol-version 1
   jepsen_read_concern: ""
@@ -1112,9 +1111,17 @@ timeout:
       working_dir: src
       script: |
         set -o verbose
+
+        # We run the hang_analyzer.py script with root privileges when running the Jepsen tests in
+        # order to be able to attach to the mongod processes inside the LXC containers.
+        sudo=
+        if [ ${distro_id} = "ubuntu1404-jepsen" ]; then
+          ${set_sudo}
+        fi
+
         hang_analyzer_option="-c -o file -o stdout -p ${hang_analyzer_processes|dbtest,java,mongo,mongod,mongos,python,_test} -g bsondump,mongodump,mongoexport,mongofiles,mongoimport,mongooplog,mongoreplay,mongorestore,mongostat,mongotop"
-        echo "Calling the hang analyzer: PATH=\"/opt/mongodbtoolchain/gdb/bin:$PATH\" python buildscripts/hang_analyzer.py $hang_analyzer_option"
-        PATH="/opt/mongodbtoolchain/gdb/bin:$PATH" python buildscripts/hang_analyzer.py $hang_analyzer_option
+        echo "Calling the hang analyzer: PATH=\"/opt/mongodbtoolchain/gdb/bin:$PATH\" $sudo python buildscripts/hang_analyzer.py $hang_analyzer_option"
+        PATH="/opt/mongodbtoolchain/gdb/bin:$PATH" $sudo python buildscripts/hang_analyzer.py $hang_analyzer_option
 
 #######################################
 #               Tasks                 #
@@ -1351,7 +1358,6 @@ tasks:
   - func: "run jepsen test"
     vars:
       <<: *jepsen_config_vars
-      hang_analyzer_processes: "java"
       jepsen_read_with_find_and_modify: --read-with-find-and-modify
       jepsen_storage_engine: --storage-engine wiredTiger
 
@@ -1363,7 +1369,6 @@ tasks:
   - func: "run jepsen test"
     vars:
       <<: *jepsen_config_vars
-      hang_analyzer_processes: "java"
       jepsen_read_concern: --read-concern linearizable
       jepsen_storage_engine: --storage-engine mmapv1
 
@@ -1375,7 +1380,6 @@ tasks:
   - func: "run jepsen test"
     vars:
       <<: *jepsen_config_vars
-      hang_analyzer_processes: "java"
       jepsen_read_concern: --read-concern linearizable
       jepsen_storage_engine: --storage-engine wiredTiger
 
