SERVER-29356 Increase the amount of memory available for tests running on Code Coverage builder
(cherry picked from commit b897b0b978236ad699505ebc87de058501afebff [formerly 8462f9a1ed3b6bbb1f7e6f6accae56ef524224ab])


Former-commit-id: 8ae8ab867a077c3fa0b2c9ea4eaa864c0b76e213

--- a/etc/evergreen.yml
+++ b/etc/evergreen.yml
@@ -5898,7 +5898,7 @@ buildvariants:
   modules:
   - enterprise
   run_on:
-  - rhel62-small
+  - rhel62-large
   batchtime: 10080 # 7 days
   stepback: false
   expansions:
@@ -5907,7 +5907,7 @@ buildvariants:
     compile_flags: --dbg=on --gcov --ssl MONGO_DISTMOD=rhel62 -j$(grep -c ^processor /proc/cpuinfo) CC=/opt/mongodbtoolchain/v2/bin/gcc CXX=/opt/mongodbtoolchain/v2/bin/g++ OBJCOPY=/opt/mongodbtoolchain/v2/bin/objcopy
     multiversion_platform_arch: "rhel62"
     multiversion_edition: "targeted"
-    num_jobs_available: $(grep -c ^processor /proc/cpuinfo)
+    num_jobs_available: $(($(grep -c ^processor /proc/cpuinfo) / 2)) # Avoid starting too many mongod's
     # The gcov instrumentation saves the path the .gcno files were created in as the default path
     # for the .gcda files. In Evergreen the path will start with /data/mci/[Hashed ID]/src/... where
     # the hashed ID is unique per task run. GCOV_PREFIX_STRIP is the number of directory levels to
@@ -5919,8 +5919,6 @@ buildvariants:
     build_mongoreplay: true
   tasks:
   - name: compile
-    distros:
-    - rhel62-large
   - name: aggregation
   - name: aggregation_WT
   - name: aggregation_WT_ese
@@ -5936,29 +5934,13 @@ buildvariants:
   - name: bulk_gle_passthrough
   - name: bulk_gle_passthrough_WT
   - name: concurrency
-    distros:
-    - rhel62-large
   - name: concurrency_WT
-    distros:
-    - rhel62-large
   - name: concurrency_replication
-    distros:
-    - rhel62-large
   - name: concurrency_replication_WT
-    distros:
-    - rhel62-large
   - name: concurrency_sharded
-    distros:
-    - rhel62-large
   - name: concurrency_sharded_WT
-    distros:
-    - rhel62-large
   - name: concurrency_simultaneous
-    distros:
-    - rhel62-large
   - name: concurrency_simultaneous_WT
-    distros:
-    - rhel62-large
   - name: dbtest
   - name: dbtest_WT
   - name: disk
@@ -6006,57 +5988,25 @@ buildvariants:
   - name: parallel_compatibility
   - name: parallel_compatibility_WT
   - name: read_concern_majority_passthrough_WT
-    distros:
-    - rhel62-large
   - name: read_only
   - name: read_only_WT
   - name: read_only_sharded
   - name: read_only_sharded_WT
   - name: replica_sets
-    distros:
-    - rhel62-large
   - name: replica_sets_WT
-    distros:
-    - rhel62-large
   - name: replica_sets_WT_ese
-    distros:
-    - rhel62-large
   - name: replica_sets_auth
-    distros:
-    - rhel62-large
   - name: replica_sets_compression
-    distros:
-    - rhel62-large
   - name: replica_sets_pv0
-    distros:
-    - rhel62-large
   - name: replica_sets_jscore_passthrough
-    distros:
-    - rhel62-large
   - name: replica_sets_jscore_passthrough_WT
-    distros:
-    - rhel62-large
   - name: replica_sets_initsync_jscore_passthrough
-    distros:
-    - rhel62-large
   - name: replica_sets_initsync_jscore_passthrough_WT
-    distros:
-    - rhel62-large
   - name: replica_sets_initsync_static_jscore_passthrough
-    distros:
-    - rhel62-large
   - name: replica_sets_initsync_static_jscore_passthrough_WT
-    distros:
-    - rhel62-large
   - name: replica_sets_resync_static_jscore_passthrough
-    distros:
-    - rhel62-large
   - name: replica_sets_resync_static_jscore_passthrough_WT
-    distros:
-    - rhel62-large
   - name: replica_sets_kill_secondaries_jscore_passthrough_WT
-    distros:
-    - rhel62-large
   - name: master_slave
   - name: master_slave_WT
   - name: master_slave_auth
@@ -6066,23 +6016,11 @@ buildvariants:
   - name: sharded_collections_jscore_passthrough
   - name: sharded_collections_jscore_passthrough_WT
   - name: sharding
-    distros:
-    - rhel62-large
   - name: sharding_WT
-    distros:
-    - rhel62-large
   - name: sharding_WT_ese
-    distros:
-    - rhel62-large
   - name: sharding_auth
-    distros:
-    - rhel62-large
   - name: sharding_auth_audit_WT
-    distros:
-    - rhel62-large
   - name: sharding_compression
-    distros:
-    - rhel62-large
   - name: sharding_gle_auth_basics_passthrough
   - name: sharding_gle_auth_basics_passthrough_WT
   - name: sharding_gle_auth_basics_passthrough_write_cmd
@@ -6091,14 +6029,8 @@ buildvariants:
   - name: sharding_jscore_passthrough_WT
   - name: sharding_jscore_passthrough_wire_ops_WT
   - name: sharding_last_stable_mongos_and_mixed_shards
-    distros:
-    - rhel62-large
   - name: sharding_op_query_WT
-    distros:
-    - rhel62-large
   - name: sharding_csrs_continuous_config_stepdown_WT
-    distros:
-    - rhel62-large
   - name: slow1
   - name: slow1_WT
   - name: serial_run
