--- a/etc/evergreen.yml
+++ b/etc/evergreen.yml
@@ -4005,6 +4005,7 @@ buildvariants:
     push_name: osx-ssl
     push_arch: x86_64
     tooltags: "-tags ssl"
+    gorootvars: CGO_CPPFLAGS=-I/opt/mongodbtoolchain/v2/include
     compile_flags: --ssl --allocator=system -j$(sysctl -n hw.logicalcpu) --release --osx-version-min=10.7 --libc++ CPPPATH=/opt/mongodbtoolchain/v2/include
     num_jobs_available: 1
   tasks:
@@ -4135,6 +4136,7 @@ buildvariants:
     push_name: osx
     push_arch: x86_64-enterprise
     tooltags: "-tags 'ssl sasl'"
+    gorootvars: CGO_CPPFLAGS=-I/opt/mongodbtoolchain/v2/include
     compile_flags: --ssl --allocator=system -j$(sysctl -n hw.logicalcpu) --release --osx-version-min=10.7 --libc++ CPPPATH=/opt/mongodbtoolchain/v2/include
     num_jobs_available: 1
   tasks:
