SERVER-29503 Run OS X builds on OS X 10.12 instances
Former-commit-id: 93db19e8a0489fa15aa2d0b68548342b476caf7e

--- a/etc/evergreen.yml
+++ b/etc/evergreen.yml
@@ -5383,7 +5383,7 @@ buildvariants:
 - name: osx-107
   display_name: OS X 10.7
   run_on:
-  - osx-1010
+  - macos-1012
   batchtime: 1440 # 1 day
   expansions:
     push_path: osx
@@ -5482,7 +5482,7 @@ buildvariants:
 - name: osx-107-ssl
   display_name: SSL OS X 10.7
   run_on:
-  - osx-1010
+  - macos-1012
   batchtime: 1440 # 1 day
   expansions:
     push_path: osx
@@ -5582,7 +5582,7 @@ buildvariants:
 - name: osx-107-debug
   display_name: "* OS X 10.7 DEBUG"
   run_on:
-  - osx-1010
+  - macos-1012
   expansions:
     push_path: osx
     push_bucket: downloads.mongodb.org
@@ -5624,7 +5624,7 @@ buildvariants:
   modules:
   - enterprise
   run_on:
-  - osx-1010
+  - macos-1012
   batchtime: 1440 # 1 day
   expansions:
     push_path: osx
