--- a/etc/evergreen.yml
+++ b/etc/evergreen.yml
@@ -3133,12 +3133,13 @@ buildvariants:
   - name: push
 
 - name: enterprise-linux-64-amazon-ami
-  display_name: "* Enterprise Amazon Linux"
+  display_name: "Enterprise Amazon Linux"
   modules:
   - enterprise
   - mongo-tools
   run_on:
   - linux-64-amzn-test
+  batchtime: 1440 # 1 day
   expansions:
     tooltags: "-tags 'ssl sasl'"
     push_path: linux
