SERVER-29618 fix serialization of geo match expressions
Explicitly blacklist lookup_absorb_match from aggregation_sharded_collections_passthrough.

(cherry picked from commit 00c23f80470ee377421fbaa11dd6cf81cea4107d [formerly 18bc61d22123da5897d275eb92576522a1bab4de])


Former-commit-id: c55eb86ef46ee7aede3b1e2a5d184a7df4bfb5b5

--- a/buildscripts/resmokeconfig/suites/aggregation_sharded_collections_passthrough.yml
+++ b/buildscripts/resmokeconfig/suites/aggregation_sharded_collections_passthrough.yml
@@ -24,6 +24,8 @@ selector:
     - jstests/aggregation/bugs/cursor_timeout.js
     - jstests/aggregation/bugs/lookup_unwind_getmore.js
     - jstests/aggregation/bugs/lookup_unwind_killcursor.js
+    # The following tests assume that accessed collections are unsharded.
+    - jstests/aggregation/sources/lookup/lookup_absorb_match.js
 
 executor:
   js_test:
